#435 Fix label chain selector being hidden on small screen (on homepage charts)

--- a/cmd/dcrdata/public/scss/global.scss
+++ b/cmd/dcrdata/public/scss/global.scss
@@ -2615,8 +2615,7 @@ body.darkBG {
 }
 
 @media (max-width: 1440px) {
-  .chain-selected-btn span,
-  .top-chain-selected-btn span {
+  .chain-selected-btn span {
     display: none;
   }
 
